2002-11-23 21:40  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSParagraphStyle ([NSMutableParagraphStyle -copyWithZone:]):
	Implement.

2002-11-23 21:31  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/GSHorizontalTypesetter.h,
	Headers/gnustep/gui/GSLayoutManager.h,
	Headers/gnustep/gui/GSLayoutManager_internal.h,
	Headers/gnustep/gui/GSTypesetter.h, Source/GSHorizontalTypesetter.m,
	Source/GSLayoutManager.m, Source/GSTypesetter.m,
	Headers/gnustep/gui/NSLayoutManager.h, Source/GNUmakefile,
	Source/NSLayoutManager.m: Add the new text system.

2002-11-23 18:45  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTextContainer: Implement -lineFragmentRectForProposedRect:
	sweepDirection:movementDirection:remainingRect:.

2002-11-21  Adam Fedor  <fedor@gnu.org>

	* Version: 0.8.3

2002-11-21  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSGraphicsContext.m
	Rewrote [GSSendBezierPath:] to send the full path to the
	backend. Code comes from [NSBezierPath _doPath].
	* Source/NSBezierPath.m
	Replaces [_doPath] with calls to [NSGraphicsContext
	GSSendBezierPath:]. 
	Added optimisation methods [appendBezierPath:] and
	[transformUsingAffineTransform:] on GSBezierPath.
	
2002-11-18  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSBundleAdditions.m: Added some logic in the initWithCoder
	method to handle different gorm file versions.  Even though there
	is only one version currently, we need this in place.
	* Headers/gnustep/gui/GSNibTemplates.h: Added #define for 
	GNUSTEP_NIB_VERSION.
	
2002-11-17  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m
	* Source/NSButtonCell.m
	* Source/NSMenuItemCell.m
	* Source/NSOutlineView.m
	* Source/NSPopUpButtonCell.m
	* Source/NSSplitView.m
	Removed unneeded includes.
	* Source/NSRulerView.m
	Rewrote [drawHashMarksAndLabelsInRect:] to use string drawing and
	bezier path code instead of direct PS operations.

2002-11-16  Frederic De Jaeger <dejaeger@free.fr>
